--- a/onYOURway/App/views/my/siteCollector.html
+++ b/onYOURway/App/views/my/siteCollector.html
@@ -65,7 +65,7 @@
 					<label for="addSiteLocationStreet">Address:</label>
 				</div>
 				<div class="form-group">
-					<input data-bind="value: entity.Country" class="form-control translate" placeholder="Country" />
+					<input data-bind="value: entity.Country, select2: { data: countries, placeholder: 'Select Country' }" class="form-control translate" />
 				</div>
 				<div class="form-group">
 					<div class="input-group input-group-c12">
