--- a/onYOURway/App/views/my/siteCollector.html
+++ b/onYOURway/App/views/my/siteCollector.html
@@ -102,7 +102,9 @@
 
 					<div class="form-group">
 
-						<ul class="iconList hide"></ul>
+						<ul class="iconList" data-bind="foreach: entity.Tags">
+                            <li data-bind="text: $data.name.Name || $data.name[0].Name"></li>
+                        </ul>
 
 						<button class="btn btn-warning btn-block" id="addTags" data-bind="click: toggleTagSelection"><i class="icon-plus"></i> <span class="translate">Select Tags</span></button>
 					</div>
@@ -177,267 +179,46 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button><h4 data-text="Select icons" class="modal-title translate">Select icons</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" data-bind="click: toggleTagSelection">×</button><h4 data-text="Select icons" class="modal-title translate">Select icons</h4>
 			</div>
 			<div class="modal-body">
-				<div class=" open">
+                <!--<h3>
+                    <i class="icon-plus"></i><i class="icon-minus"></i>
+                    <span data-text="Sustainable Living" class="translate">Transformap</span>
+                </h3>-->
+                <div class="open" data-bind="foreach: taxonomy">
+                    <div class="panel-group" id="accordion" data-bind="attr: { id: 'accordion' + Id }">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="">
+                                    <a data-toggle="collapse" data-parent="#accordion" data-bind="attr: { 'data-parent': '#accordion' + Id, href: '#' + Id }" href="#group_172">
+                                        <i class="icon-plus"></i><i class="icon-minus"></i>
+                                        <span data-bind="text: $data.name.Name || $data.name[0].Name"></span>
+                                        <br />
+                                        <small data-bind="text: $data.name.Description || $data.name[0].Description"></small>
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="group_172" class="panel-collapse collapse" data-bind="attr: { id: Id }">
+                                <div class="panel-body list-group" data-bind="foreach: tag">
 
-					<!--<h3>
-						<i class="icon-plus"></i><i class="icon-minus"></i>
-						<span data-text="Sustainable Living" class="translate">Transformap</span>
-					</h3>-->
-
-					<!--<div class="panel-group" id="accordion">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="">
-									<a data-toggle="collapse" data-parent="#accordion" href="#group_172" data-bind="attr: { href: '#'+Id }">
-										<i class="icon-plus"></i><i class="icon-minus"></i> <span data-bind="text: $data.name.Name || $data.name[0].Name"></span>
-									</a>
-								</h4>
-							</div>
-						</div>
-						<div id="group_172" class="panel-collapse collapse" data-bind="attr: { id: Id }">
-							<ul class="panel-body list-group" data-bind="foreach: tags">
-
-								<li class="list-group-item" data-bind="attr: { id: Id }">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										<span data-bind="text: $data.name.Name || $data.name[0].Name"></span><br />
-										<small data-bind="text: $data.name.Name || $data.name[0].Name">Here you can find food, that is produced sustainably and cooperatively or 'saved' from being thrown away. Some is shared, some produced together, and some is given away.</small>
-									</h5>
-								</li>
-							</ul>
-						</div>
-					</div>-->
-
-					<div class="panel-group" id="accordion">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="">
-									<a data-toggle="collapse" data-parent="#accordion" href="#group_172">
-										<i class="icon-plus"></i><i class="icon-minus"></i> <span class="translate">Needs</span>
-									</a>
-								</h4>
-							</div>
-						</div>
-						<div id="group_172" class="panel-collapse collapse">
-							<ul class="panel-body list-group">
-
-								<li class="list-group-item" id="key_1">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: food<br />
-										<small>Here you can find food, that is produced sustainably and cooperatively or 'saved' from being thrown away. Some is shared, some produced together, and some is given away.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_2">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: beverages<br />
-										<small>Here you can find water and other drinks, free for everyone or produced and distributed in a cooperative way</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_3">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: land<br />
-										<small>Here you find land to use and share, which has been withdrawn from the real estate market.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_4">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: mobility<br />
-										<small>Here you find possibilities to go from A to B without having to pay the usual market price. By joining someone in his/her car, driving together or sharing a car, to name a few</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_5">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: health<br />
-										<small>Here you find what keeps and makes us healthy - without health insurance. Healthcare and preventive health are organised collectively</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_6">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: culture<br />
-										<small>Here you find non-commercial cultural events or free spaces to organize an event or to perform as an artist yourself. Or you can join facilities/events without a ticket and for a donation.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_7">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: safety<br />
-										<small>Places and people that provide a sense of security, support and safety.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_8">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: housing<br />
-										<small>Here you find shelter - for a short time or permanently without buying or renting it from the real estate market.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_9">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: space<br />
-										<small>Here you find free spaces to meet, hang out or do whatever you want.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_10">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: objets_of_utility<br />
-										<small>Here you can get or borrow different tools and other things, that others don't need any longer or only ocassionally use.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_11">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: clothes<br />
-										<small>Here you can find clothes that are secondhand, homemade, produced collectively or come from fair-trade sources.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_12">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: knowledge<br />
-										<small>Here is a space where knowledge is shared or where people learn and research together.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_13">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: skills<br />
-										<small>Here you can learn practical, useful knowledge, that engages head and hand.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_14">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: energy<br />
-										<small>Electricity, heating, transportation - all these require energy. Here you find projects, ideas and places, where this energy is generated sustainable or collectively.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_15">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: community<br />
-										<small>A diverse group of people that offers support and empowerment by coming together.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_16">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										provides: participation<br />
-										<small>Here is an opportunity to initiate activities, participate or deliberate on public issues.</small>
-									</h5>
-								</li>
-
-							</ul>
-						</div>
-					</div>
-
-					<div class="panel-group" id="accordion">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="">
-									<a data-toggle="collapse" data-parent="#accordion" href="#group_171">
-										<i class="icon-plus"></i><i class="icon-minus"></i> <span class="translate">Mode of Production</span>
-									</a>
-								</h4>
-							</div>
-						</div>
-						<div id="group_171" class="panel-collapse collapse">
-							<ul class="panel-body list-group">
-								<li class="list-group-item" id="key_34">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										P2P<br />
-										<small>Here you find things produced P2P, that is in a cooperative way among peers, where everybody contributes what he/she can. See also: http://p2pfoundation.net/Peer_Production</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_35">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										diy&dit<br />
-										<small>Here you can produce or repair, upcycle or downcycle something by yourself or together with others.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_36">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										Commoning<br />
-										<small>Here, commons are produced, that is people produce and use together what they need for a good and meaningful life.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_37">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										Open Manufacturing<br />
-										<small>Here the process of designing, producing and distributing physical goods is defined by combining open knowledge with distributed infrastructures.</small>
-									</h5>
-								</li>
-								<li class="list-group-item" id="key_38">
-									<h5 class="m-t-n-xxs m-b-n-xxs translate">
-										fair-production<br />
-										<small>Projects, cooperatives and firms who cooperates with others to fullfill the needs of all people involved and to contribute to a locally embedded, sustainable and globally fair economy.</small>
-									</h5>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-
-					<div class="panel-group" id="accordion">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="">
-									<a data-toggle="collapse" data-parent="#accordion" href="#group_168">
-										<i class="icon-plus"></i><i class="icon-minus"></i> <span class="translate">Knowledge and Resource Management</span>
-									</a>
-								</h4>
-							</div>
-						</div>
-						<div id="group_168" class="panel-collapse collapse">
-							<ul class="panel-body list-group"></ul>
-						</div>
-					</div>
-					<div class="panel-group" id="accordion">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="">
-									<a data-toggle="collapse" data-parent="#accordion" href="#group_169">
-										<i class="icon-plus"></i><i class="icon-minus"></i> <span class="translate">Mode of Interaction</span>
-									</a>
-								</h4>
-							</div>
-						</div>
-						<div id="group_169" class="panel-collapse collapse">
-							<ul class="panel-body list-group"></ul>
-						</div>
-					</div>
-					<div class="panel-group" id="accordion">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="">
-									<a data-toggle="collapse" data-parent="#accordion" href="#group_170">
-										<i class="icon-plus"></i><i class="icon-minus"></i> <span class="translate">Mode of Organization</span>
-									</a>
-								</h4>
-							</div>
-						</div>
-						<div id="group_170" class="panel-collapse collapse">
-							<ul class="panel-body list-group"></ul>
-						</div>
-					</div>
-
-
-					<div class="panel-group" id="accordion">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="">
-									<a data-toggle="collapse" data-parent="#accordion" href="#group_173">
-										<i class="icon-plus"></i><i class="icon-minus"></i> <span class="translate">Political Identity</span>
-									</a>
-								</h4>
-							</div>
-						</div>
-						<div id="group_173" class="panel-collapse collapse">
-							<ul class="panel-body list-group"></ul>
-						</div>
-					</div>
-
-
-				</div>
-			</div>
-			<div class="modal-footer">
-				<div data-text="Cancel" class="btn btn-default updateIcons translate" data-bind="click: toggleTagSelection">Cancel</div>
-				<div data-text="Done" class="btn btn-success updateIcons translate" data-bind="click: addTags">Done</div>
-			</div>
-		</div><!-- /.modal-content -->
+                                    <a class="list-group-item" data-bind="attr: { id: Id }, click: function() {$root.toggleTag($data)}, css: $root.entity.Tags.indexOf($data) >= 0 ? 'active' : ''">
+                                        <h5 class="m-t-n-xxs m-b-n-xxs translate">
+                                            <span data-bind="text: $data.name.Name || $data.name[0].Name"></span><br />
+                                            <small data-bind="text: $data.name.Description || $data.name[0].Description"></small>
+                                        </h5>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div data-text="Cancel" class="btn btn-default updateIcons translate" data-bind="click: toggleTagSelection">Cancel</div>
+                <div data-text="Done" class="btn btn-success updateIcons translate" data-bind="click: addTags">Done</div>
+            </div>
+        </div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog --><div style="width: 578px; left: 428px; z-index: 9999999; display: none;" class="sticky"><div data-i="0" data-text="Done" class="btn btn-default updateIcons translate">Done</div></div>
 </div>
 
