--- a/onYOURway/App/views/vonMorgen/_nav.html
+++ b/onYOURway/App/views/vonMorgen/_nav.html
@@ -31,17 +31,15 @@
 
 		<!--search-->
 		<div id="vm-search-row" class="row">
-			<div id="vm-nav-direct" class="btn-group pull-left">
-				<a href="#add" class="btn bd-l bd-r" title="Neuen Eintrag hinzufügen"><i id="vm-nav-add" class="fa fa-fw fa-plus"></i></a>
-				<a href="#" class="btn bd-l bd-r disabled" title="aktuelle Position bestimmen"><i id="vm-nav-add" class="fa fa-fw fa-crosshairs"></i></a>
-			</div>
 			<form id="search-bar" class="navbar-form hidden-xs" role="search">
+				<a href="#" class="btn m-l-n bd-r disabled" title="aktuelle Position bestimmen"><i id="vm-nav-add" class="fa fa-fw fa-crosshairs"></i></a>
 				<input name="searchFor"
 					   class="searchFor"
 					   type="text"
 					   placeholder="search"
 					   autocomplete="off" spellcheck="false" autofocus="autofocus">
 				<a id="startSearchBtn" title="Suchen" class="" tabindex="-1" data-bind="click: search"> <i class="fa fa-fw fa-search"></i></a>
+				<a href="#add" class="btn bd-l pull-right" title="Neuen Eintrag hinzufügen"><i id="vm-nav-add" class="fa fa-fw fa-plus"></i></a>
 				<div id="vm-search-options" class="pull-right">
 					<a class="btn bd-l bd-r initiative active" href="#">
 						<span class="hidden-sm">Initiativen &amp; Inspirationen</span>
