--- a/onYOURway/App/themes/_shared.less
+++ b/onYOURway/App/themes/_shared.less
@@ -49,11 +49,23 @@
 	-o-transition: 0.3s ease-in-out;
 	transition: 0.3s ease-in-out;
 }
-
 @media (max-width: 767px) { /*xs*/
 	#mySiteCollector {
 		width: 100%;
 	}
+}
+
+#mySiteCollector ul.item-tags {
+	list-style: none;
+	list-style-type: none;
+	padding: 0 3px;
+}
+#mySiteCollector ul.item-tags > li {
+	display: block;
+	padding: 3px 5px;
+	margin-bottom: 3px;
+	background-color: silver;
+	border-radius: 3px;
 }
 
 /*#endregion locationDetails*/
