add: styled select2 in SiteCollector vonMorgen

--- a/onYOURway/App/themes/vonMorgen/css/vonMorgen.css
+++ b/onYOURway/App/themes/vonMorgen/css/vonMorgen.css
@@ -182,10 +182,22 @@ input.searchFor {
 /*#region theme */
 input.form-control,
 textarea.form-control,
-select.form-control {
+select.form-control,
+.select2-container {
   border: none;
+  box-shadow: none;
   border-radius: 0;
   border-bottom: 3px solid #666666;
+  min-height: 30px;
+  background-image: none;
+}
+.select2-container .select2-choice {
+  background-image: none;
+  min-height: 30px;
+  padding: 0 12px 6px 12px;
+}
+.select2-result.select2-result-selectable.select2-highlighted {
+  background-color: #666666;
 }
 /*::-webkit-input-placeholder { color: @hellgrau; }
 ::-moz-placeholder { color: @hellgrau; }
