siteCollector: reload locations after save, close siteCollectore, detach entity

--- a/onYOURway/App/views/my/siteCollector.html
+++ b/onYOURway/App/views/my/siteCollector.html
@@ -167,7 +167,7 @@
 
 		<div class="row panel-body">
 			<button class="ok btn btn-success btn-large pull-right" data-bind="click: submit"><i class="fa fa-check"></i> <span class="translate">submit</span> </button>
-			<button class="ok btn btn-default btn-large pull-right"><i class="fa fa-remove"></i> <span class="translate">cancel</span> </button>
+			<button class="ok btn btn-default btn-large pull-right" data-bind="click: close"><i class="fa fa-remove"></i> <span class="translate">cancel</span> </button>
 		</div>
 	</form>
 
