--- a/onYOURway/App/views/vonMorgen/_nav.html
+++ b/onYOURway/App/views/vonMorgen/_nav.html
@@ -33,11 +33,9 @@
 		<div id="vm-search-row" class="row">
 			<form id="search-bar" class="navbar-form hidden-xs" role="search">
 				<a href="#" class="btn m-l-n bd-r disabled" title="aktuelle Position bestimmen"><i id="vm-nav-add" class="fa fa-fw fa-crosshairs"></i></a>
-				<input name="searchFor"
-					   class="searchFor"
-					   type="text"
-					   placeholder="search"
-					   autocomplete="off" spellcheck="false" autofocus="autofocus">
+                <input type="text" class="form-control" placeholder="Was" style="width: 200px; min-height: 34px;"
+                       id="searchFor" name="searchFor" autocomplete="off" spellcheck="false" autofocus="autofocus"
+                       data-bind="value: location.searchFor, select2: {multiple: true, minimumInputLength: 1, query: suggestQuery }">
 				<a id="startSearchBtn" title="Suchen" class="" tabindex="-1" data-bind="click: search"> <i class="fa fa-fw fa-search"></i></a>
 				<a href="#add" class="btn bd-l pull-right" title="Neuen Eintrag hinzufügen"><i id="vm-nav-add" class="fa fa-fw fa-plus"></i></a>
 				<div id="vm-search-options" class="pull-right">
