--- a/onYOURway/App/views/home.html
+++ b/onYOURway/App/views/home.html
@@ -110,7 +110,7 @@
         <img class="text-center" src="/App/images/logo.targetsize-128.png" alt="onYOURway" />
       </div>
       <a href="#/about/preview" class="alert alert-danger" style="color: #fff;">
-        <strong>Public Preview</strong> mit Testdaten
+	  	<strong data-bind="localText: 'home.preview'">Public Preview mit Testdaten</strong>
       </a>
     </header>
 
