--- a/onYOURway/App/themes/vonMorgen/css/vonMorgen.less
+++ b/onYOURway/App/themes/vonMorgen/css/vonMorgen.less
@@ -1,6 +1,8 @@
 ﻿/*colors*/
 @import url('../fonts/source-sans-pro.css');
 
+@import "searchBox.less";
+
 //palette
 @graublau: rgb(100,122,133);
 @blau: rgb(0,152,137);
