--- a/onYOURway/App/components/searchBox-component.html
+++ b/onYOURway/App/components/searchBox-component.html
@@ -1,24 +1,24 @@
     <input type="text"
-       class="form-control"
+       class="form-control searchBox"
        placeholder="Suchen"
-       style="width: 200px; min-height: 34px;"
        name="searchFor"
        autocomplete="off"
        spellcheck="false"
        autofocus="autofocus"
        data-bind="
-                value: location.searchFor,
-                select2: {
-                    multiple: true,
-                    minimumInputLength: 1,
-                    data: {results: location.searchSuggestionObjects(), text: 'Name'},
-                    formatResult: formatSearchSuggestion,
-                    formatSelection: formatSelection,
-                    createSearchChoice: createSearchChoice,
-                    createSearchChoicePosition: 'bottom',
-                    placeholder: 'Suchen',
-                    id: 'Name'
-                },
-                event:{ 'change': selectionChangedEvent }
-            ">
+            value: location.searchFor,
+            select2: {
+                multiple: true,
+                minimumInputLength: 1,
+                data: {results: location.searchSuggestionObjects(), text: 'Name'},
+                formatResult: formatSearchSuggestion,
+                formatSelection: formatSelection,
+                createSearchChoice: createSearchChoice,
+                createSearchChoicePosition: 'bottom',
+                placeholder: 'Suchen',
+                id: 'Name',
+                width: 'off'
+            },
+            event:{ 'change': selectionChangedEvent }
+    ">
     <a title="Suchen" class="searchBoxButton" tabindex="-1" data-bind="click: triggerSearch"> <i class="fa fa-fw fa-search"></i></a>
