--- a/onYOURway.Client.WebApp/App/themes/vonMorgen/css/searchBox.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgen/css/searchBox.less
@@ -1,4 +1,8 @@
-﻿div.searchBoxSuggestion {
+﻿input.searchBox {
+    min-height: 34px;
+}
+
+div.searchBoxSuggestion {
 
     img {
         float: left;
@@ -8,8 +12,8 @@
 
     span {
         padding-left: 4px;
-        display: inline-block;
-        width: 80%;
+        display: block;
+        margin-left: 48px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
