refactoring location.js: make remaining facade / interface in location.js smaller, further reduce dependencies and make more variables private. temporary comments in location.js (what is used where) will be removed after refactoring is complete

--- a/onYOURway.Client.WebApp/App/views/_nav.html
+++ b/onYOURway.Client.WebApp/App/views/_nav.html
@@ -110,8 +110,8 @@
 
 						<li class="divider"></li>
 						<li class="dropdown-header">Kartenstil</li>
-						<!-- ko foreach: location.settings.tileLayers -->
-						<li><a href="#" data-bind="click: function () { $root.location.setTileLayer($index()); }"><span data-bind="text: Name"></span> <i class="fa fa-check" data-bind="visible: $data === $root.location.layers.tileLayer()"></i></a></li>
+						<!-- ko foreach: location.tileLayers -->
+						<li><a href="#" data-bind="click: function () { $root.location.setTileLayer($index()); }"><span data-bind="text: Name"></span> <i class="fa fa-check" data-bind="visible: $data === $root.location.activeTileLayer()"></i></a></li>
 						<!-- /ko -->
 
 					</ul>
