--- a/onYOURway.Client.WebApp/App/views/vonMorgen/_map.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgen/_map.html
@@ -2,7 +2,7 @@
 
     <!--Map-->
     <div id="map" data-bind=" map: { initialize: location.initializeMap }
-                          , ventures : { map: location.map, data: location.mapLocations }
+                          , ventures : { data: location.mapLocations }
                           , css: { listOpen: showList, siteCollectorOpen: showSiteCollector }
                           ">
 
