vonMorgen: add a new fast and "minimal version" of vonMorgen, that only uses really necessary libraries and parts of the existing implementations and that does NOT use bootstrap

--- a/onYOURway.Client.WebApp/App/components/searchBox-component.html
+++ b/onYOURway.Client.WebApp/App/components/searchBox-component.html
@@ -7,11 +7,11 @@
        spellcheck="false"
        autofocus="autofocus"
        data-bind="
-            value: location.searchFor,
+            value: searchTerm,
             select2: {
                 multiple: true,
                 minimumInputLength: 1,
-                data: {results: location.searchSuggestionObjects(), text: 'Name'},
+                data: {results: searchSuggestionObjects(), text: 'Name'},
                 formatResult: formatSearchSuggestion,
                 formatSelection: formatSelection,
                 createSearchChoice: createSearchChoice,
