vonMorgenMin: improve siteCollector selected tag list layout

--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.less
@@ -31,7 +31,7 @@ body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-body, header, div, span {
+body, header, div, span, ul, ol {
     margin: 0;
 }
 
@@ -175,7 +175,7 @@ header {
                 padding: 8px 0 7px 0;
             }
             a.visible-m {
-                width: 85px;
+                width: 13%;
             }
             a.hidden-sm {
                 width: 18%;
