--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/siteCollector.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/siteCollector.less
@@ -187,6 +187,20 @@
   .row {
     clear: both;
   }
+  ul.item-tags {
+    list-style: none;
+    list-style-type: none;
+    padding: 0 3px;
+
+    li {
+      display: block;
+      padding: 3px 5px;
+      margin-bottom: 3px;
+      background-color: silver;
+      border-radius: 3px;
+    }
+  }
+
 }
 
 .fade.in {
